Ejercicio empezado ajax botones

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conato05 - jQuery</title>
+    <title>BOTONES AJAX EJEMPLOS</title>
     <script src="../node_modules/jquery/dist/jquery.js"></script> 
 </head>
 <body>
     <h1>Un ejemplo<h1>
         <h3>subapartado cabecera h3 </h3>
+
+
+        <button id="listar"> list</button>
+        <div id="redListar"></div>
+        <button id="listar"> list</button>
+        <div id="redListar"></div>
+        <button id="listar"> list</button>
+        <div id="redListar"></div>
+        <button id="listar"> list</button>
+        <div id="redListar"></div>
+
+        <button id="listar"> list</button>
+        <div id="redListar"></div>
+
+        
+
 
     <script src="./javascript/index.js"></script>
 </body>
