--- a/src/index.html
+++ b/src/index.html
@@ -3,29 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOTONES AJAX EJEMPLOS</title>
-    <script src="../node_modules/jquery/dist/jquery.js"></script> 
+    <title>Botones Disposición</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Un ejemplo<h1>
-        <h3>subapartado cabecera h3 </h3>
-
-
-        <button id="listar"> list</button>
-        <div id="redListar"></div>
-        <button id="listar"> list</button>
-        <div id="redListar"></div>
-        <button id="listar"> list</button>
-        <div id="redListar"></div>
-        <button id="listar"> list</button>
-        <div id="redListar"></div>
-
-        <button id="listar"> list</button>
-        <div id="redListar"></div>
-
-        
-
-
-    <script src="./javascript/index.js"></script>
+    <div class="top-buttons">
+        <button class="btn">Botón 1</button>
+        <button class="btn">Botón 2</button>
+        <button class="btn">Botón 3</button>
+    </div>
+    <div class="bottom-buttons">
+        <button class="btn">Botón 4</button>
+        <button class="btn">Botón 5</button>
+    </div>
+    <script src="javascript/index.js"></script>
 </body>
 </html>
+
+
